data/issues_nolabel/nolabel_test_11229.txt
32-bit build failure in tensorflow/contrib/tensor_forest/kernels/stats_ops.cc

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): Linux Ubuntu 14.04.5 i386
TensorFlow installed from (source or binary): source
TensorFlow version (use command below): Git revision 744120f
Python version: 2.7.6
Bazel version (if compiling from source): 0.4.5
CUDA/cuDNN version: N/A
GPU model and memory: N/A
Exact command to reproduce: See log below

Describe the problem
Building //tensorflow/contrib/tensor_forest:stats_ops_lib for a 32-bit architecture fails,
Source code / logs
git checkout 744120f
export PYTHON_BIN_PATH=/usr/bin/python
export USE_DEFAULT_PYTHON_LIB_PATH=1
export CC_OPT_FLAGS="-march=native"
export TF_NEED_MKL=0
export TF_NEED_JEMALLOC=1
export TF_NEED_GCP=0
export TF_NEED_HDFS=0
export TF_ENABLE_XLA=0
export TF_NEED_OPENCL=0
export TF_NEED_CUDA=0
export TF_NEED_VERBS=0
export TF_NEED_MPI=0
export COMPUTE=:0
./configure
bazel build -c opt --verbose_failures //tensorflow/contrib/tensor_forest:stats_ops_lib
(removed unimportant log output)
ERROR: /home/codeplay/tensorflow/tensorflow/contrib/tensor_forest/BUILD:277:1: C++ compilation of rule '//tensorflow/contrib/tensor_forest:stats_ops_lib' failed: gcc failed: error executing command
(cd /home/codeplay/.cache/bazel/bazel_codeplay/552bd1ca300856cf615cf243a9219401/execroot/tensorflow && 
exec env - 
PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games 
PYTHON_BIN_PATH=/usr/bin/python 
PYTHON_LIB_PATH=/usr/local/lib/python2.7/dist-packages 
TF_NEED_CUDA=0 
TF_NEED_OPENCL=0 
/usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 '-D_FORTIFY_SOURCE=1' -DNDEBUG -ffunction-sections -fdata-sections '-std=c++0x' -MD -MF bazel-out/local-opt/bin/tensorflow/contrib/tensor_forest/objs/stats_ops_lib/tensorflow/contrib/tensor_forest/kernels/stats_ops.pic.d '-frandom-seed=bazel-out/local-opt/bin/tensorflow/contrib/tensor_forest/objs/stats_ops_lib/tensorflow/contrib/tensor_forest/kernels/stats_ops.pic.o' -fPIC -DEIGEN_MPL2_ONLY -iquote . -iquote bazel-out/local-opt/genfiles -iquote external/bazel_tools -iquote bazel-out/local-opt/genfiles/external/bazel_tools -iquote external/eigen_archive -iquote bazel-out/local-opt/genfiles/external/eigen_archive -iquote external/local_config_sycl -iquote bazel-out/local-opt/genfiles/external/local_config_sycl -iquote external/protobuf -iquote bazel-out/local-opt/genfiles/external/protobuf -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/eigen_archive -isystem bazel-out/local-opt/genfiles/external/eigen_archive -isystem external/protobuf/src -isystem bazel-out/local-opt/genfiles/external/protobuf/src -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE="redacted"' '-D__TIMESTAMP_="redacted"' '-D__TIME__="redacted"' -c tensorflow/contrib/tensor_forest/kernels/stats_ops.cc -o bazel-out/local-opt/bin/tensorflow/contrib/tensor_forest/objs/stats_ops_lib/tensorflow/contrib/tensor_forest/kernels/stats_ops.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from ./tensorflow/contrib/tensor_forest/kernels/v4/leaf_model_operators.h:19:0,
from ./tensorflow/contrib/tensor_forest/kernels/v4/decision-tree-resource.h:21,
from tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:18:
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h: In member function 'virtual float tensorflow::tensorforest::TensorInputTarget::GetTargetWeight(int) const':
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:70:47: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
return num_weights > 0 && example_index < num_weights
^
In file included from ./tensorflow/contrib/tensor_forest/kernels/v4/split_collection_operators.h:20:0,
from ./tensorflow/contrib/tensor_forest/kernels/v4/fertile-stats-resource.h:24,
from tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:19:
./tensorflow/contrib/tensor_forest/kernels/v4/grow_stats.h: In member function 'bool tensorflow::tensorforest::GrowStats::IsInitialized() const':
./tensorflow/contrib/tensor_forest/kernels/v4/grow_stats.h:80:49: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
return weight_sum > 0 || splits_.size() == num_splits_to_consider_;
^
tensorflow/contrib/tensor_forest/kernels/stats_ops.cc: In function 'void tensorflow::tensorforest::UpdateStats(tensorflow::tensorforest::FertileStatsResource*, const std::unique_ptrtensorflow::tensorforest::TensorDataSet&, const tensorflow::Tensor&, const tensorflow::Tensor&, int, const std::vector&, const std::vector&, std::unordered_map<int, std::unique_ptrtensorflow::mutex >, tensorflow::mutex, tensorflow::int32, tensorflow::int32, std::unordered_set)':
tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:176:72: error: no matching function for call to 'tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, int>, 0, Eigen::MakePointer>, const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, int>, 0, Eigen::MakePointer>, const tensorflow::Tensor&, int&)'
TensorInputTarget target(&labels, &weights, input_labels, num_targets);
^
tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:176:72: note: candidates are:
In file included from ./tensorflow/contrib/tensor_forest/kernels/v4/leaf_model_operators.h:19:0,
from ./tensorflow/contrib/tensor_forest/kernels/v4/decision-tree-resource.h:21,
from tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:18:
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:57:3: note: tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(const SingleDimStorageType, const SingleDimStorageType*, const tensorflow::Tensor&, int)
TensorInputTarget(const SingleDimStorageType* t,
^
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:57:3: note:   no known conversion for argument 1 from 'const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, int>, 0, Eigen::MakePointer>' to 'const SingleDimStorageType {aka const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, long int>, 0>}'
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note: tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(const tensorflow::tensorforest::TensorInputTarget&)
class TensorInputTarget : public StoredInputTarget {
^
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note:   candidate expects 1 argument, 4 provided
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note: tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(tensorflow::tensorforest::TensorInputTarget&&)
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note:   candidate expects 1 argument, 4 provided
tensorflow/contrib/tensor_forest/kernels/stats_ops.cc: In function 'void tensorflow::tensorforest::UpdateStatsCollated(tensorflow::tensorforest::FertileStatsResource, tensorflow::tensorforest::DecisionTreeResource*, const std::unique_ptrtensorflow::tensorforest::TensorDataSet&, const tensorflow::Tensor&, const tensorflow::Tensor&, int, const std::unordered_map<int, std::vector >&, const std::vector&, tensorflow::mutex*, tensorflow::int32, tensorflow::int32, std::unordered_set)':
tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:226:72: error: no matching function for call to 'tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, int>, 0, Eigen::MakePointer>, const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, int>, 0, Eigen::MakePointer>, const tensorflow::Tensor&, int&)'
TensorInputTarget target(&labels, &weights, input_labels, num_targets);
^
tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:226:72: note: candidates are:
In file included from ./tensorflow/contrib/tensor_forest/kernels/v4/leaf_model_operators.h:19:0,
from ./tensorflow/contrib/tensor_forest/kernels/v4/decision-tree-resource.h:21,
from tensorflow/contrib/tensor_forest/kernels/stats_ops.cc:18:
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:57:3: note: tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(const SingleDimStorageType, const SingleDimStorageType*, const tensorflow::Tensor&, int)
TensorInputTarget(const SingleDimStorageType* t,
^
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:57:3: note:   no known conversion for argument 1 from 'const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, int>, 0, Eigen::MakePointer>' to 'const SingleDimStorageType {aka const Eigen::TensorMap<Eigen::Tensor<const float, 1, 1, long int>, 0>*}'
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note: tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(const tensorflow::tensorforest::TensorInputTarget&)
class TensorInputTarget : public StoredInputTarget {
^
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note:   candidate expects 1 argument, 4 provided
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note: tensorflow::tensorforest::TensorInputTarget::TensorInputTarget(tensorflow::tensorforest::TensorInputTarget&&)
./tensorflow/contrib/tensor_forest/kernels/v4/input_target.h:55:7: note:   candidate expects 1 argument, 4 provided
Target //tensorflow/contrib/tensor_forest:stats_ops_lib failed to build